@@ -247,7 +247,7 @@ local questsMetadata = {
 	[6031] = { name="Runecloth", baseexp=8150, qlvl=55, type="turnin", reqItems="14047-30", reqRep=576, reqRepRank=5, routes="Main,Strat,Solo", routePickup="Timbermaw", routeSection="Timbermaw", areaType="Zone", area="Timbermaw Hold", },
 	[6032] = { name="Sacred Cloth", baseexp=8150, qlvl=55, type="turnin", reqItems="14342-2", reqRep=576, reqRepRank=5, reqProf=197, reqProfSkill=280, routes="Main,Strat,Solo", routePickup="Timbermaw", routeSection="Timbermaw", areaType="Zone", area="Timbermaw Hold", },
 	[8485] = { name="The Brokering of Peace", baseexp=14300, qlvl=60, type="turnin", reqRep=576, reqRepRank=8, routes="Main,Strat,Solo", routePickup="Timbermaw", routeSection="Orgrimmar", areaType="Zone", area="Timbermaw Hold", },
-	[5527] = { name="A Reliquary of Purity", baseexp=9550, qlvl=60, type="optional", routes="Main,Strat,Solo", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
+	[5527] = { name="A Reliquary of Purity", baseexp=9550, qlvl=60, type="optional", reqItems="22201-1", routes="Main,Strat,Solo", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
 	[5526] = { name="Shards of the Felvine", baseexp=14300, qlvl=60, type="turnin", reqItems="18501-1", preQuests="5527", routes="Main,Strat,Solo", routePickup="Moonglade", routeSection="Moonglade", areaType="Zone", area="Moonglade", comments="You can collect the shard from Dire Maul without being on the quest. Loot the object on the ground" },
 	[8446] = { name="Shrouded in Nightmare", baseexp=14300, qlvl=60, type="turnin", reqItems="20644-1", routes="Main,Strat,Solo", routePickup="Moonglade", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
 	[6845] = { name="Uncovering Past Secrets", baseexp=10900, qlvl=57, type="turnin", preQuests="1123,1124,1125", routes="Main,Strat,Solo", routePickup="Moonglade", routeSection="Moonglade", areaType="Zone", area="Moonglade", },
@@ -299,7 +299,7 @@ local questsMetadata = {
 	[5251] = { name="The Archivist", baseexp=14300, qlvl=60, type="qlog", routes="Strat", routeSection="EPLTown", areaType="Dungeon", area="Stratholme", },
 	[2937] = { name="Summoning Shadra", baseexp=12250, qlvl=55, type="optional", reqItems="9324-1", preQuests="2933,2934,2935,2936", routes="Main,Strat,Solo", routeSection="AV", areaType="Zone", area="Tarren Mill", },
 	[8279] = { name="The Twilight Lexicon", baseexp=11900, qlvl=60, type="qlog", reqItems="20394-1,20395-1,20396-1", preQuests="8284,8285", routes="Main,Strat,Solo", routePickup="SilithusCave", routeSection="SilithusCave", areaType="Zone", area="Silithus", comments="The books can NOT be looted without the quest after the pre-patch. This quest needs to be in the questlog, or completed before TBC starts, as we need the followups" },
-	[7441] = { name="Pusillin and the Elder Azj'Tordin", baseexp=13500, qlvl=58, type="optional", routes="Solo", routeSection="Feralas", areaType="Dungeon", area="Dire Maul", comments="This quest requires too much running for the little ext boost, but if you need it as optional, It's turned in north of Camp Mojache" },
+	[7441] = { name="Pusillin and the Elder Azj'Tordin", baseexp=13500, qlvl=58, type="optional", reqItems="18261-1", routes="Solo", routeSection="Feralas", areaType="Dungeon", area="Dire Maul", comments="This quest requires too much running for the little ext boost, but if you need it as optional, It's turned in north of Camp Mojache" },
 	[4771] = { name="Dawn's Gambit", baseexp=14300, qlvl=60, type="turnin", preQuests="4726,4808,4809,4810,4734", routes="Strat", routePickup="EPLTown", routeSection="EPLTown2", areaType="Dungeon", area="Scholomance", },
 	[4987] = { name="Glyphed Oaken Branch", baseexp=8450, qlvl=56, type="turnin", preQuests="4984,4985", routes="Main,Strat", routePickup="WPLWrithingHaunt", routeSection="ThunderBluff", areaType="Dungeon", area="Western Plaguelands", },
 	[4941] = { name="Eitrigg's Wisdom", baseexp=9550, qlvl=60, type="turnin", preQuests="4903", routes="Main,Strat,Solo", routePickup="Badlands", routeSection="Orgrimmar", areaType="Dungeon", area="Badlands", comments="This quest is part of the Onyxia Attunement. The Onyxia head is better exp, as it unlocks 2x 14300 exp quests, but if you don't plan on getting it, this is available as an extra turnin. Make sure Warlord's Command is either in your questlog, or is completed" },
