@@ -2,6 +2,8 @@ Changelog:
 4.01 
 - Added Paladin-only turnin quest "Proving Your Hatred"
 - Rewrote the "Manual Mail Help" guide again.
+- Added Required Item to "A Reliquary of Purity"
+- Added Required Item to "Pusillin and the Elder Azj'Tordin"
 
 4.0 (2026-02-03)
 - Added Battle for Alterac in Preparation
